# SploitGPT

./: .dockerignore  .env.example  CONTRIBUTING.md  README.md  SploitGPT.code-workspace  compose.yaml  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  sploitgpt.sh
configs/sliver/: sploitgpt.cfg
docker/sliver/: Dockerfile  entrypoint.sh
docs/: SLIVER_INTEGRATION.md  SLIVER_LLM_TRAINING.md  sliver-tools.md
extras/: metasploit-cheatsheet.md
scripts/: build_training_data.py  eval_llm.py  export_docs.py  firewall_setup.sh  firewall_ufw.sh  gen_instructions.py  network_config.sh  run_agent_cli.sh  run_agent_tui.sh  sanity_network.sh  setup.py  smoke_podman.sh
sploitgpt/: __main__.py  cli.py  db.py
sploitgpt/agent/: agent.py  context.py
sploitgpt/core/: boot.py  config.py  ollama.py
sploitgpt/knowledge/: __init__.py  atomic.py  gtfobins.py  rag.py
sploitgpt/knowledge/sources/: ad_exploitation_cheatsheet.md  awesome_shodan_queries.md  default_creds_cheatsheet.md  methodology.md  payloadsallthethings_xss.md  shodan_dorks.md
sploitgpt/msf/: __init__.py  viewer.py
sploitgpt/sliver/: __init__.py  viewer.py
sploitgpt/tools/: __init__.py  cloud_gpu.py  commands.py  intel.py  payloads.py  psudohash.py  shodan.py  sliver.py
sploitgpt/training/: __init__.py  collector.py  finetune.py
sploitgpt/tui/: app.py
tests/: test_agent_flow.py  test_agent_interaction.py  test_cloud_gpu.py  test_config.py  test_gtfobins.py  test_msf.py  test_msf_viewer.py  test_shodan.py  test_sliver.py  test_tools.py  test_training.py
training/sliver/: README.md
training/sliver/config/: dataset_info.json  training_config.yaml
training/sliver/output/: dedup_report.txt  sliver_messages.jsonl  (+3 more)
(+18 files in other folders)
